samples/_failures_safe/1760958935_e326ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1ab991b.c: In function ‘main’:
./samples/SAFE/__tmp_b1ab991b.c:167:39: error: expected ‘)’ at end of input
  167 |         if (!fgets(input, sizeof(input
      |                                 ~     ^
      |                                       )
./samples/SAFE/__tmp_b1ab991b.c:167:14: error: too few arguments to function ‘fgets’
  167 |         if (!fgets(input, sizeof(input
      |              ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_b1ab991b.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_b1ab991b.c:167:9: error: expected declaration or statement at end of input
  167 |         if (!fgets(input, sizeof(input
      |         ^~
./samples/SAFE/__tmp_b1ab991b.c:167:9: error: expected declaration or statement at end of input
